@@ -8,6 +8,5 @@ updateURL=http://stats.i2p/i2p/plugins/zzzot-update.xpi2p
 updateURL.su3=http://stats.i2p/i2p/plugins/zzzot-update.su3
 websiteURL=http://zzz.i2p/forums/16
 license=Apache 2.0
-min-jetty-version=7
-max-jetty-version=8.9999
-min-i2p-version=0.9.9
+min-jetty-version=9
+min-i2p-version=0.9.29
