@@ -25,7 +25,7 @@
     </target>
 
     <property name="javac.compilerargs" value="" />
-    <property name="javac.version" value="1.6" />
+    <property name="javac.version" value="1.7" />
 
     <target name="compile">
         <mkdir dir="./build" />
